<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>uk.gov.dstl.baleen</groupId>
  <artifactId>baleen</artifactId>
  <version>2.7.0-SNAPSHOT</version>
  <packaging>pom</packaging>
  <name>Baleen</name>
  <description>Structured information from unstructured data</description>
  <url>http://github.com/dstl/baleen</url>
  <inceptionYear>2015</inceptionYear>

  <licenses>
    <license>
      <name>Apache License 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0</url>
    </license>
  </licenses>

  <scm>
    <url>http://github.com/dstl/baleen</url>
    <connection>scm:git:git://github.com/dstl/baleen.git</connection>
  </scm>

  <developers>
    <developer>
      <name>James Baker</name>
    </developer>
    <developer>
      <name>Chris Flatley</name>
    </developer>
    <developer>
      <name>Rich Brantingham</name>
    </developer>
    <developer>
      <name>Alan Knox</name>
    </developer>
  </developers>

  <prerequisites>
    <maven>3.0.1</maven>
  </prerequisites>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <baleen.version>2.7.0-SNAPSHOT</baleen.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>

    <!-- Dependencies -->
    <activemq.version>5.15.6</activemq.version>
    <ahocorasick.version>0.4.0</ahocorasick.version>
    <commonscli.version>1.4</commonscli.version>
    <commonsemail.version>1.5</commonsemail.version>
    <commonsio.version>2.6</commonsio.version>
    <commonslang3.version>3.8.1</commonslang3.version>
    <concurrenttrees.version>2.6.1</concurrenttrees.version>
    <elasticsearch.version>5.6.12</elasticsearch.version>
    <evoinflector.version>1.2.2</evoinflector.version>
    <extjwnl.version>1.9.4</extjwnl.version>
    <extjwnldata.version>1.2</extjwnldata.version>
    <fastclasspathscanner.version>2.18.1</fastclasspathscanner.version>
    <geojson-jackson.version>1.8.1</geojson-jackson.version>
    <gremlin.version>3.3.3</gremlin.version>
    <guava.version>24.0-jre</guava.version>
    <h2.version>1.4.197</h2.version>
    <httpclient.version>4.5.6</httpclient.version>
    <httpcore.version>4.4.10</httpcore.version>
    <jackson.version>2.9.7</jackson.version>
    <javamail.version>1.6.2</javamail.version>
    <javassist.version>3.20.0-GA</javassist.version>
    <jena.version>3.8.0</jena.version>
    <jest.version>2.4.0</jest.version>
    <jetty.version>9.4.12.v20180830</jetty.version>
    <jmustache.version>1.14</jmustache.version>
    <jsonic.version>1.3.10</jsonic.version>
    <jsoup.version>1.11.3</jsoup.version>
    <jung.version>2.1.1</jung.version>
    <krill.version>1.0.3</krill.version>
    <languagedetector.version>0.6</languagedetector.version>
    <liblinear.version>2.20</liblinear.version>
    <logback.version>1.2.3</logback.version>
    <maltparser.version>1.9.2</maltparser.version>
    <mboxiterator.version>0.8.2</mboxiterator.version>
    <metrics.version>3.0.2</metrics.version>
    <metrics-elasticsearch.version>2.2.0</metrics-elasticsearch.version>
    <mongodb.version>3.5.0</mongodb.version>
    <opencsv.version>4.3.1</opencsv.version>
    <opennlp.version>1.9.0</opennlp.version>
    <postgres.version>42.2.5</postgres.version>
    <reflections.version>0.9.11</reflections.version>
    <slf4j.version>1.7.25</slf4j.version>
    <spatial4j.version>0.6</spatial4j.version>
    <snakeyaml.version>1.23</snakeyaml.version>
    <trove4j.version>3.0.3</trove4j.version>
    <uimafit.version>2.4.0</uimafit.version>


    <!-- Testing -->
    <fongo.version>2.1.1</fongo.version>
    <greenmail.version>1.5.8</greenmail.version>
    <junit.version>4.12</junit.version>
    <jts.version>1.13</jts.version>
    <log4j.version>2.11.1</log4j.version>
    <mockito.version>2.23.0</mockito.version>
    <testcontainers.version>1.9.1</testcontainers.version>

    <skip.unit.tests>false</skip.unit.tests>
    <skip.integration.tests>true</skip.integration.tests>

    <!-- Build and Reporting -->
    <maven-compiler-plugin.version>3.8.0</maven-compiler-plugin.version>
    <maven-jar-plugin.version>3.1.0</maven-jar-plugin.version>
    <maven-javadoc-plugin.version>3.0.1</maven-javadoc-plugin.version>
    <maven-shade-plugin.version>3.2.0</maven-shade-plugin.version>
    <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
    <maven-failsafe-plugin.version>${maven-surefire-plugin.version}</maven-failsafe-plugin.version>
    <maven-spotless.version>1.15.0</maven-spotless.version>
  </properties>

  <dependencies>
    <!-- General utilities -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
      <version>${guava.version}</version>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <version>${commonsio.version}</version>
    </dependency>

    <!-- UIMA -->
    <dependency>
      <groupId>org.apache.uima</groupId>
      <artifactId>uimafit-core</artifactId>
      <version>${uimafit.version}</version>
    </dependency>

    <!-- Testing -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <version>${mockito.version}</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>

      <!-- Compiler -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven-compiler-plugin.version}</version>
      </plugin>

      <plugin>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <skip>${skip.unit.tests}</skip>
          <excludes>
            <exclude>**/*IT.java</exclude>
          </excludes>
          <argLine>${argLine} -Xmx2048m -XX:MaxPermSize=256m</argLine>
        </configuration>
      </plugin>

      <!-- Javadocs plugin -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <configuration>
          <additionalparam>-Xdoclint:none</additionalparam>
          <doclint>none</doclint>
          <taglets>
            <taglet>
              <tagletClass>uk.gov.dstl.baleen.javadoc.ConfigurationParameters</tagletClass>
              <tagletClass>uk.gov.dstl.baleen.javadoc.ExternalResources</tagletClass>
              <tagletClass>uk.gov.dstl.baleen.javadoc.BaleenJavadoc</tagletClass>
              <tagletArtifact>
                <groupId>uk.gov.dstl.baleen</groupId>
                <artifactId>${javadoc.artifact}</artifactId>
                <version>${baleen.version}</version>
              </tagletArtifact>
            </taglet>
          </taglets>
        </configuration>
      </plugin>

      <!-- Integration testing -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <executions>
          <execution>
            <id>integration-test</id>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
            <configuration>
              <skipITs>${skip.integration.tests}</skipITs>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- formatter -->
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${maven-spotless.version}</version>
        <configuration>
          <java>
            <googleJavaFormat>
              <style>GOOGLE</style>
            </googleJavaFormat>
            <removeUnusedImports />
            <importOrder>
              <order>java,javax,org,com,uk</order>
            </importOrder>
          </java>
        </configuration>
        <executions>
          <execution>
            <phase>compile</phase>
            <goals>
              <goal>apply</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>

  </build>

  <modules>
    <module>baleen-core</module>
    <module>baleen-annotators</module>
    <module>baleen-uima</module>
    <module>baleen-resources</module>
    <module>baleen-collectionreaders</module>
    <module>baleen-consumers</module>
    <module>baleen-runner</module>
    <module>baleen-history</module>
    <module>baleen-jobs</module>
    <module>baleen-orderers</module>
    <module>baleen-odin</module>
    <module>baleen-entity-linking</module>
    <module>baleen-mallet</module>
    <module>baleen-graph</module>
    <module>baleen-graph-neo4j</module>
    <module>baleen-rdf</module>
    <module>baleen-transports</module>
    <module>baleen-activemq</module>
    <module>baleen-kafka</module>
    <module>baleen-rabbitmq</module>
    <module>baleen-redis</module>
    <module>${javadoc.artifact}</module>
  </modules>

  <profiles>
    <profile>
      <id>java-8</id>
      <activation>
        <jdk>1.8</jdk>
      </activation>
      <properties>
        <javadoc.artifact>baleen-javadoc</javadoc.artifact>
      </properties>
    </profile>

    <profile>
      <id>java-9</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <javadoc.artifact>baleen-javadoc9</javadoc.artifact>
      </properties>
    </profile>
  </profiles>
</project>
